change design from nav link pages

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
       <ul>
         <li>Sobre</li>
-        
+
         <div id="part1">
           <li>Carreira</li>
           <li>Educação</li>
@@ -31,11 +31,11 @@
           <li>Cursos</li>
           <li>Skills</li>
         </div>
+
+        <li>Meus Projetos</li>
       </ul>
     </nav>
-
-    <div class="li">Meus Projetos</div>
-
+    
     <main>
     </main>
 
