--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
     <main>
       <section>
         <img id="i1" src="./img/side-projects/p1.png" alt="ScreenShoto do projeto1">
-        <a href="https://thiagomassenomaciel.github.io/Projetos-front-end.github.io/" defer>Site de uma imobiliária<h4>Simples pagina web estilo lading page <br/>:-:::html:::-:<br/>:-:::::css:::::-:</h4></a>
+        <a href="https://thiagomassenomaciel.github.io/Projetos-front-end.github.io/">
+
+          Site de uma imobiliária
+          <h4>Simples pagina web estilo lading page 
+            <br/>
+            :--html--:--css--:
+          </h4>
+
+        </a>
       </section>
       
     </main>
