Update PAGES  carreira and Sobre

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 
     <nav>
       <ul>
-        <li>Sobre</li>
+        <li><a href="./pages/sobre.html">Sobre</a></li>
 
         <div id="part1">
-          <li>Carreira</li>
-          <li>Educação</li>
+          <li><a href="./pages/carreira.html">Carreira</a></li>
+          <li><a  href="./pages/educacao.html">Educação</a></li>
         </div>
        
         <div id="part2"> 
-          <li>Cursos</li>
-          <li>Skills</li>
+          <li><a  href="./pages/cursos.html">Cursos</a></li>
+          <li><a>Skills</a></li>
         </div>
 
-        <li>Meus Projetos</li>
+        <li><a  href="./pages/mp.html">Meus Projetos</a></li>
       </ul>
     </nav>
     
@@ -43,8 +43,7 @@
 
           Site de uma imobiliária
           <h4>Simples pagina web estilo lading page 
-            <br/>
-            :--html--:--css--:
+<!--  <br/>    :--html--:--css--:  -->
           </h4>
 
         </a>
