Structure already done , from all pages

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
        
         <div id="part2"> 
           <li><a  href="./pages/cursos.html">Cursos</a></li>
-          <li><a>Skills</a></li>
+          <li><a href="./pages/skills.html" >Skills</a></li>
         </div>
 
-        <li><a  href="./pages/mp.html">Meus Projetos</a></li>
+        <li><a  href="./pages/meusPJ.html">Meus Projetos</a></li>
       </ul>
     </nav>
     
