--- a/pages/carreira.html
+++ b/pages/carreira.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
 
     <main>
       <section>
-        <img src="./img.png" alt="icone da empresa  tal qual tive experiência profissional">
+        <img src="./img.png" alt="icone da 1º empresa  tal qual tive experiência profissional">
         <article>
           <h3 alt="Nome do cargo ocupado">.</h3>
           <h3 alt="Nome da empresa e | Tempo estagiado">.</h3>
@@ -26,7 +26,7 @@
       </section>
   
       <section>
-        <img src="./img.png" alt="icone da empresa  tal qual tive experiência profissional">
+        <img src="./img.png" alt="icone da 2º empresa  tal qual tive experiência profissional">
         <article>
           <h3 alt="Nome do cargo ocupado">.</h3>
           <h3 alt="Nome da empresa e | Tempo estagiado">.</h3>
