--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -3,26 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Educacao</title>
-  <link rel="stylesheet" href="./Estyle.css" type="text/css" />
+  <title>Cursos</title>
+  <link rel="stylesheet" href="/CURSOSstyle.css" type="text/css"/>
+
 </head>
 <body>
   <div id="App">
     <header>
       <a href="../index.html">&looparrowleft; Voltar</a>
-      <h1>Educacao</h1>
+      <h1>Cursos</h1>
     </header>
 
     <main>
       <section>
-        <h2>Name Of course Education did</h2>
+        <h2>Name Of course i did</h2>
         <p>
           
         </p>
       </section>
 
       <section>
-        <h2>Name of Second Education</h2>
+        <h2>Name of Second course</h2>
         <p>
           ´´
         </p>
@@ -31,6 +32,7 @@
 
     </main>
   </div>
+  
   
 </body>
 </html>
