--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,21 +39,22 @@
         </div>
 
         <div id="Contatos">
-          <span></span>
+          <span>.</span>
           <br/>
-          <span></span>
+          <span>.</span>
           <br/>
-          <span></span>
+          <span>.</span>
           <br/>
-          <span></span>
+          <span>.</span>
           <br/>
         </div>
 
         <div id="Idiomas">
+          .
           <img src="" alt="Bandeira do país chamado brasil" />
           <img src="" alt="Bandeira do país chamado USA" />
         </div>
-      
+      .
       </section>
 
     </main>
