--- a/pages/skills.html
+++ b/pages/skills.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Skills</title>
+  <link rel="stylesheet" href="./SKstyle.css" type="text/css">
 </head>
 <body>
   <div id="App">
@@ -13,6 +14,50 @@
     </header>
           
     <main>
+      <section>
+        <div id="title_skill">
+         title da skill cinza claro
+        </div>
+
+        <div id="border">
+          cinza escuro
+          <div id="textoSHORT">
+            cinza muito claro
+          </div>
+
+        </div>
+      </section>
+      
+      <br/>
+
+      <section>
+        <div id="title_skill">
+         title da skill cinza claro
+        </div>
+
+        <div id="border">
+          cinza escuro
+          <div id="textoSHORT">
+            cinza muito claro
+          </div>
+
+        </div>
+      </section>
+      <br/>
+      <section>
+        <div id="title_skill">
+         title da skill cinza claro
+        </div>
+
+        <div id="border">
+          cinza escuro
+          <div id="textoSHORT">
+            cinza muito claro
+          </div>
+
+        </div>
+      </section>
+
 
     </main>
 
