Cor design 1 escolhido

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Meu Portfolio</title>
   <link rel="stylesheet" href="./style.css" type="text/css"/>
 
 </head>
@@ -43,7 +43,7 @@
 
           Site de uma imobiliária
           <h4>Simples pagina web estilo lading page 
-<!--  <br/>    :--html--:--css--:  -->
+          <!--  <br/>    :--html--:--css--:  -->
           </h4>
 
         </a>
