Structure sobre DONE

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -10,7 +10,7 @@
 <body>
   <div id="App">
     <header id="title">
-      <a href="../index.html">&looparrowleft; Voltar</a>
+      <a href="../index.html">⬅</a>
       <h1>Sobre</h1>
     </header>
 
@@ -23,7 +23,9 @@
           </p>
         </div>
 
-        <a href="./skills.html"> Skills</a>
+        <div id="a">
+          <a href="./skills.html"> Skills</a>
+        </div>
 
         <div id="social_midias">
           <a href="#">zap</a>
