pedaço de sobre feito

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -41,6 +41,7 @@
         </div>
 
         <div id="Contatos">
+          contatos
           <span>.</span>
           <br/>
           <span>.</span>
@@ -52,7 +53,7 @@
         </div>
 
         <div id="Idiomas">
-          .
+          .idiomas
           <img src="" alt="Bandeira do país chamado brasil" />
           <img src="" alt="Bandeira do país chamado USA" />
         </div>
