--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -5,12 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sobre</title>
   <link rel="stylesheet" href="./Sstyle.css" type="text/css"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
   <div id="App">
     <header id="title">
-      <a href="../index.html">⬅</a>
+      <a href="../index.html">
+       <i class="material-symbols-outlined">arrow_back</i>
+      </a>
       <h1>Sobre</h1>
     </header>
 
@@ -19,7 +23,7 @@
         
         <div id="Introduction">
           <p>
-            Uma breve introdução
+            Sou um desenvolvedor de software iniciante e estou graduando em Sistemas de Informação com foco na criação e desenvolvimento de sistemas web .
           </p>
         </div>
 
@@ -27,41 +31,46 @@
           <a href="./skills.html"> Skills</a>
         </div>
 
-        <div id="social_midias">
-          <a href="#">zap</a>
-          <a href="#">insta</a>
-          <a href="#">github</a>
-          <a href="#">linkedin</a>
-          <a href="#">youtube</a>
-
-          <div id="seePROJECTS">
-            <a href="#">See my projects</a>
+        <div id="sideBYside">
+          <div id="social_midias">
+            <a href="#"><i class="bi bi-whatsapp"></i> Whatsapp</a>
+            <a href="#"><i class="bi bi-instagram"></i> Instagram</a>
+            <a href="#"><i class="bi bi-github"></i> Github</a>
+            <a href="#"><i class="bi bi-linkedin"></i> Linkedin</a>
+            <a href="#"><i class="bi bi-youtube"></i> Youtube</a>
+  
+            <div id="seePROJECTS">
+              <a href="#"><i class="bi bi-search"></i>meus projetos</a>
+            </div>
+  
           </div>
-
-        </div>
-
-        <div id="Contatos">
-          contatos
-          <span>.</span>
-          <br/>
-          <span>.</span>
-          <br/>
-          <span>.</span>
-          <br/>
-          <span>.</span>
-          <br/>
+  
+          <div id="Contatos">
+       <!-- <span>Contatos</span>    -->
+            <span id="span1"><i class="bi bi-geo-alt-fill"></i> Av. Dep. Paulino Rocha -Itaitinga - CE, nº 5855 </span>
+            <br/>
+            <span><i class="bi bi-telephone-fill"></i>  +55 85 99221-0323</span>
+            <br/>
+            <span id="span4"><i class="bi bi-envelope-at"></i> thiagomasseno3@gmail.com</span>
+            <br/>
+          </div>
         </div>
 
         <div id="Idiomas">
-          .idiomas
-          <img src="" alt="Bandeira do país chamado brasil" />
-          <img src="" alt="Bandeira do país chamado USA" />
+          <p>Idiomas </p>
+
+          <div id="Flex-row">
+            <img src="../img/idioma_1.png" alt="Bandeira do país chamado brasil" />
+            <img src="../img/idioma_2.png" alt="Bandeira do país chamado USA" />
+          </div>
         </div>
-      .
+
       </section>
 
     </main>
 
   </div>
+
+
 </body>
 </html>
