END page CARREIRA

--- a/pages/carreira.html
+++ b/pages/carreira.html
@@ -5,32 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carreira</title>
   <link rel="stylesheet" href="./Cstyle.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
   <div id="App">
     <header id="title">
-      <a href="../index.html">&looparrowleft; Voltar</a>
+      <a href="../index.html">
+        <i class="bi bi-arrow-left-circle-fill"></i>
+      </a>
       <h1>Carreira</h1>
-      
-
     </header>
 
     <main>
       <section>
-        <img src="./img.png" alt="icone da 1º empresa  tal qual tive experiência profissional">
+        <img src="../img/Empresa1.png" alt="icone da 1º empresa  tal qual tive experiência profissional">
         <article>
-          <h3 alt="Nome do cargo ocupado">.</h3>
-          <h3 alt="Nome da empresa e | Tempo estagiado">.</h3>
-          <textarea id="Tarefas feitas no estagio"  name="funcoes executadas" rows="4" cols="50">.</textarea>
+          <h3 alt="Nome do cargo ocupado">Assistente de pesquisa em laboratório</h3>
+          <h5 alt="Nome da empresa | Vinculo empregaticio | Tempo estagiado">
+            Eletra Energy Solutions | Estágio | jan até set de 2021 - 3 meses
+          </h5>
+          <p>
+Durante este estágio, adquiri conhecimentos de informática utilizando: <br/>
+▶ferramentas que fazem parte do <span>pacote Microsoft Office</span>, bem como outros. <br/> 
+▶Softwares proprietários utilizados pela empresa. Analise de Case <span>Testes com a linguagem C#</span> <br/>
+▶Também realizei <span>atividades de apoio</span> no Laboratório de Engenharia.
+          </p>
         </article>
       </section>
-  
+      
       <section>
-        <img src="./img.png" alt="icone da 2º empresa  tal qual tive experiência profissional">
+        <img src="../img/Empresa2.png" alt="icone da 2º empresa  tal qual tive experiência profissional">
         <article>
-          <h3 alt="Nome do cargo ocupado">.</h3>
-          <h3 alt="Nome da empresa e | Tempo estagiado">.</h3>
-          <textarea id="Tarefas feitas no estagio"  name="funcoes executadas" rows="4" cols="50">.</textarea>
+          <h3 alt="Nome do cargo ocupado">Suporte Ti</h3>
+          <h5 alt="Nome da empresa e | Tempo estagiado">
+            Núcleo dos Laboratórios de Informática (LABINFO) | Bolsa de estudo | Ago de 2022 até Jan 2023 - 6 meses
+          </h5>
+          <p>
+Nesta experiência profissional, fiz :<br/>
+▶<span>Atendimento aos alunos</span> com algumas dúvidas sobre a plataforma Universitária.<br/>
+▶Suporte aos Laboratórios de Informática com <span>instalação de software e monitoramento de máquinas</span>. <br/>
+▶Controle ao <span>Banco de dados</span> de alunos matriculados. <br/>
+▶Fornecer acesso e <span>controle em computadores</span> e gerenciamento de senhas.<br/>
+          </p>
         </article>
       </section>
     </main>
