--- a/pages/educacao.html
+++ b/pages/educacao.html
@@ -5,19 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Educacao</title>
   <link rel="stylesheet" href="./Estyle.css" type="text/css" />
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
 </head>
 <body>
   <div id="App">
-    <header>
-      <a href="../index.html">&looparrowleft; Voltar</a>
-      <h1>Educacao</h1>
+    <header id="title">
+      <a href="../index.html">
+       <i class="material-symbols-outlined">arrow_back</i>
+      </a>
+      <h1>Educação</h1>
     </header>
 
     <main>
       <section>
         <h2>Name Of course Education did</h2>
         <p>
-          
+          ,,
         </p>
       </section>
 
