PAGE education Already Done

--- a/pages/educacao.html
+++ b/pages/educacao.html
@@ -21,16 +21,22 @@
 
     <main>
       <section>
-        <h2>Name Of course Education did</h2>
+        <h2>Bacharel em Sistemas de Informação</h2>
         <p>
-          ,,
+
+          <span>2022.1 - Presente ( 4º semestre)</span>
+          <br/>
+          <span>Centro Universitário 7 de Setembro</span>
+
         </p>
       </section>
 
       <section>
-        <h2>Name of Second Education</h2>
+        <h2>Curso Técnico em Redes de Computadores</h2>
         <p>
-          ´´
+          <span>2018 - 2020</span>
+          <br/>
+          <span>E.E.E.P.Francisco Aristóteles de Sousa</span>
         </p>
       </section>
 
