--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -23,7 +23,7 @@
         
         <div id="Introduction">
           <p>
-            Sou um desenvolvedor de software iniciante e estou graduando em Sistemas de Informação com foco na criação e desenvolvimento de sistemas web .
+            Sou um desenvolvedor de software iniciante e estou graduando em Sistemas de Informação com foco na criação e desenvolvimento de sistemas web front-end . E futuramente full- Stack.
           </p>
         </div>
 
