PAGE cursos Already Done

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -4,28 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cursos</title>
-  <link rel="stylesheet" href="/CURSOSstyle.css" type="text/css"/>
+  <link rel="stylesheet" href="./CURSOSstyle.css" type="text/css"/>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
 
 </head>
 <body>
   <div id="App">
-    <header>
-      <a href="../index.html">&looparrowleft; Voltar</a>
+    <header id="title">
+      <a href="../index.html">
+       <i class="material-symbols-outlined">arrow_back</i>
+      </a>
       <h1>Cursos</h1>
+      
     </header>
+
+    <section>
+      <span>Esta sessão são outros treinamentos que fiz.</span>
+    </section>
 
     <main>
       <section>
-        <h2>Name Of course i did</h2>
+        <h2 id="h2" >2018</h2>
+        <h2>Empreendedorismo - Patrocínio da empresa Sebrae junto com a Secretaria de Educação.</h2>
         <p>
-          
+          E.E.E.P.Professor Francisco Aristóteles de Sousa, Itaitinga -CE .
         </p>
       </section>
 
       <section>
-        <h2>Name of Second course</h2>
+        <h2 id="h2" >2017</h2>
+        <h2>Informatica Básica -Patrocínio da Prefeitura do município de Eusébio e fundação Alphaville</h2>
         <p>
-          ´´
+          Pollo Cultural do Bairro Jabuti , Eusébio - CE 
         </p>
       </section>
 
