--- a/pages/skills.html
+++ b/pages/skills.html
@@ -5,14 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Skills</title>
   <link rel="stylesheet" href="./SKstyle.css" type="text/css">
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
 </head>
 <body>
   <div id="App">
-    <header>
-      <a href="../index.html">&looparrowleft; Voltar</a>
+    <header id="title">
+      <a href="../index.html">
+       <i class="material-symbols-outlined">arrow_back</i>
+      </a>
       <h1>Skills</h1>
     </header>
-          
     <main>
       <section>
         <div id="title_skill">
@@ -20,7 +25,7 @@
         </div>
 
         <div id="border">
-          cinza escuro
+          cinza escuro                                                                          
           <div id="textoSHORT">
             cinza muito claro
           </div>
