Bug from nav center solved

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="./img/i3.png" alt="Imagem do meu perfil neste portifolio">
       <div class="Description">
         <h1>Thiago Masseno Maciel</h1>
-        <h3>Estudante de Sitstemas de Informação</h3>
+        <h3>Estudante de Sistemas de Informação</h3>
       </div>
     </header>
 
