Uptade PAGE educação

--- a/pages/educacao.html
+++ b/pages/educacao.html
@@ -21,6 +21,7 @@
 
     <main>
       <section>
+        <img src="../img/Empresa2.png" alt="Logo da escola de ensino médio tal qual frequentei"/>
         <h2>Bacharel em Sistemas de Informação</h2>
         <p>
 
@@ -32,6 +33,7 @@
       </section>
 
       <section>
+        <img src="../img/Ensino_Médio.png" alt="Logo da escola de ensino médio tal qual frequentei"/>
         <h2>Curso Técnico em Redes de Computadores</h2>
         <p>
           <span>2018 - 2020</span>
