Bugs ON page MEUS PROJETOS

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -41,7 +41,7 @@
             <a href="#"><i class="bi bi-youtube"></i> Youtube</a>
   
             <div id="seePROJECTS">
-              <a href="#"><i class="bi bi-search"></i>meus projetos</a>
+              <a href="./meusPJ.html"><i class="bi bi-search"></i>meus projetos</a>
             </div>
   
           </div>
