--- a/pages/meusPJ.html
+++ b/pages/meusPJ.html
@@ -5,27 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meus Projetos</title>
   <link rel="stylesheet" href="./MEUSPJstyle.css" type="text/css"/>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"/>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
 </head>
 <body>
-
-  <header>
-    <a href="../index.html">&looparrowleft; Voltar</a>
-    <h1>Veja aqui meus projetos</h1>
-  </header>
-
-  <main>
-    <section> <!--   mg/side-projects/p1.png   -->
-      <img id="i1" src="../img/side-projects/p1.png" alt="ScreenShoto do projeto1">
-      <a href="https://thiagomassenomaciel.github.io/Projetos-front-end.github.io/">
-
-        Site de uma imobiliária
-        <h4>Simples pagina web estilo lading page 
-  <!--  <br/>    :--html--:--css--:  -->
-        </h4>
-
+  <div id="App">
+    <header id="title">
+      <a href="../index.html">
+       <i class="material-symbols-outlined">arrow_back</i>
       </a>
-    </section>
-  </main>
+      <h1>Veja aqui meus projetos</h1>
+    </header>
 
+    <nav>
+      <ul>
+        <li><a href="Last-Project" title="Last-Project">Ultimo Projeto</a></li>
+        <li><a href="#" title="Project Number 11">11º</a></li>
+        <li><a href="#" title="Project Number 11">10º</a></li>
+        <li><a href="#" title="Project Number 11">9º</a></li>
+        <li><a href="#" title="Project Number 11">8º</a></li>
+        <li><a href="#" title="Project Number 11">7º</a></li>
+        <li><a href="#" title="Project Number 11">6º</a></li>
+        <li><a href="#" title="Project Number 11">5º</a></li>
+        <li><a href="#" title="Project Number 11">4º</a></li>
+        <li><a href="#" title="Project Number 11">3º</a></li>
+        <li><a href="#" title="Project Number 11">2º</a></li>
+        <li><a href="#" title="Project Number 11">1º</a></li>
+      </ul>
+    </nav>
+  
+    <main>
+      <section> <!--   mg/side-projects/p1.png   -->
+        <img id="i1" src="../img/side-projects/p1.png" alt="ScreenShoto do projeto1">
+        <a href="https://thiagomassenomaciel.github.io/Projetos-front-end.github.io/">
+  
+          Site de uma imobiliária
+          <h4>Simples pagina web estilo lading page 
+    <!--  <br/>    :--html--:--css--:  -->
+          </h4>
+          <h3><i class="bi bi-filetype-html"></i></h3>
+          <h3><i class="bi bi-filetype-css"></i></h3>
+          <h3><i class="bi bi-bootstrap-fill"></i></h3>
+  
+        </a>
+      </section>
+    </main>
+  </div>
 </body>
 </html>
