--- a/pages/meusPJ.html
+++ b/pages/meusPJ.html
@@ -24,28 +24,27 @@
     <nav>
       <ul>
         <li><a href="Last-Project" title="Last-Project">Ultimo Projeto</a></li>
-        <li><a href="#" title="Project Number 11">11º</a></li>
-        <li><a href="#" title="Project Number 11">10º</a></li>
-        <li><a href="#" title="Project Number 11">9º</a></li>
-        <li><a href="#" title="Project Number 11">8º</a></li>
-        <li><a href="#" title="Project Number 11">7º</a></li>
-        <li><a href="#" title="Project Number 11">6º</a></li>
-        <li><a href="#" title="Project Number 11">5º</a></li>
-        <li><a href="#" title="Project Number 11">4º</a></li>
-        <li><a href="#" title="Project Number 11">3º</a></li>
-        <li><a href="#" title="Project Number 11">2º</a></li>
-        <li><a href="#" title="Project Number 11">1º</a></li>
+        <li><a href="#p11" title="Project Number 11">11º</a></li>
+        <li><a href="#p10" title="Project Number 11">10º</a></li>
+        <li><a href="#p9" title="Project Number 11">9º</a></li>
+        <li><a href="#p8" title="Project Number 11">8º</a></li>
+        <li><a href="#p7" title="Project Number 11">7º</a></li>
+        <li><a href="#p6" title="Project Number 11">6º</a></li>
+        <li><a href="#p5" title="Project Number 11">5º</a></li>
+        <li><a href="#p4" title="Project Number 11">4º</a></li>
+        <li><a href="#p3" title="Project Number 11">3º</a></li>
+        <li><a href="#p2" title="Project Number 11">2º</a></li>
+        <li><a href="#p1" title="Project Number 11">1º</a></li>
       </ul>
     </nav>
   
     <main>
-      <section> <!--   mg/side-projects/p1.png   -->
+      <section id="p1"> <!--   mg/side-projects/p1.png   -->
         <img id="i1" src="../img/side-projects/p1.png" alt="ScreenShoto do projeto1">
         <a href="https://thiagomassenomaciel.github.io/Projetos-front-end.github.io/">
   
           Site de uma imobiliária
           <h4>Simples pagina web estilo lading page 
-    <!--  <br/>    :--html--:--css--:  -->
           </h4>
           <h3><i class="bi bi-filetype-html"></i></h3>
           <h3><i class="bi bi-filetype-css"></i></h3>
@@ -53,6 +52,140 @@
   
         </a>
       </section>
+
+      <section id="p2"> <!--   mg/side-projects/p1.png   -->
+        <img id="i2" src="../img/side-projects/p2.png" alt="ScreenShoto do projeto2">
+        <a href="https://thiagomassenomaciel.github.io/Projeto-02-front-end.github.io/">
+  
+          Site de uma academia
+          <h4>Simples pagina web estilo lading page tal qual referece á um formulário a fim de registar em agenda eventos .
+          </h4>
+          <h3><i class="bi bi-filetype-html"></i></h3>
+          <h3><i class="bi bi-filetype-css"></i></h3>
+          <h3><i class="bi bi-bootstrap-fill"></i></h3>
+  
+        </a>
+      </section>
+
+      <section id="p3"> 
+        <img id="i3" src="../img/side-projects/p3.png" alt="ScreenShoto do projeto3">
+        <a href="https://thiagomassenomaciel.github.io/Projeto03-front-end.github.io/">
+  
+          Formulário de eventos
+          <h4>Simples pagina web estilo lading page tal qual referece á um formulário a fim de registar em agenda eventos .
+          </h4>
+          <h3><i class="bi bi-filetype-html"></i></h3>
+          <h3><i class="bi bi-filetype-css"></i></h3>
+          <h3><i class="bi bi-bootstrap-fill"></i></h3>
+  
+        </a>
+      </section>
+
+      <section id="p4"> 
+        <img id="i4" src="../img/side-projects/p4.png" alt="ScreenShoto do projeto4">
+        <a href="https://thiagomassenomaciel.github.io/Projeto-04-Front-end.github.io/">
+  
+          Site responsivo
+          <h4>Simples pagina web estilo lading page tal qual referece á um exemplo de responsividade aplicada em uma lading page.
+          </h4>
+          <h3><i class="bi bi-filetype-html"></i></h3>
+          <h3><i class="bi bi-filetype-css"></i></h3>
+          <h3><i class="bi bi-bootstrap-fill"></i></h3>
+  
+        </a>
+      </section>
+
+      <section id="p5"> 
+        <img id="i5" src="../img/side-projects/p5.png" alt="ScreenShoto do projeto5">
+        <a href="https://thiagomassenomaciel.github.io/Projeto-05-Front-End.github.io/vers%C3%A3o2/index.html">  
+          Site responsivo
+          <h4>Simples pagina web estilo lading page tal qual referece á um exemplo de responsividade aplicada em uma lading page.
+          </h4>
+          <h3><i class="bi bi-filetype-html"></i></h3>
+          <h3><i class="bi bi-filetype-css"></i></h3>
+          <h3><i class="bi bi-bootstrap-fill"></i></h3>
+  
+        </a>
+      </section>
+
+      <section id="p6"> 
+        <img id="i6" src="../img/side-projects/p5.png" alt="ScreenShoto do projeto6">
+        <a href="https://thiagomassenomaciel.github.io/Projeto-06--front-end.github.io/Vers%C3%A3o-01/animation/index.html">  
+          Site de uma coleção de Galáxias
+          <h4>Exibe um consjunto de Galáxias e algumas curiosidades a respeito do cosmo.
+          </h4>
+          <h3><i class="bi bi-filetype-html"></i></h3>
+          <h3><i class="bi bi-filetype-css"></i></h3>
+          <h3><i class="bi bi-bootstrap-fill"></i></h3>
+  
+        </a>
+      </section>
+
+      <section id="p7"> 
+        <img id="i7" src="../img/side-projects/p7.png" alt="ScreenShoto do projeto7">
+        <a href="https://thiagomassenomaciel.github.io/Projeto-07-front-end.github.io/Version-1-1-5/index.html">  
+          Site Galeria de Animações do css
+          <h4>Um site em formato de cartalogo para varias animações css .
+          </h4>
+          <h3><i class="bi bi-filetype-html"></i></h3>
+          <h3><i class="bi bi-filetype-css"></i></h3>
+          <h3><i class="bi bi-bootstrap-fill"></i></h3>
+        </a>
+      </section>
+
+      <section id="p8"> 
+        <img id="i8" src="../img/side-projects/p8.png" alt="ScreenShoto do projeto8">
+        <a href="https://thiagomassenomaciel.github.io/Projeto-08-front-end.github.io/">  
+          Biscoito da Sorte
+          <h4>Uma aplicação web interativa que simula um biscotinho da sorte chinês , acompanhado de mensagens da sorte.
+          </h4>
+          <h3><i class="bi bi-filetype-html"></i></h3>
+          <h3><i class="bi bi-filetype-css"></i></h3>
+          <h3><i class="bi bi-bootstrap-fill"></i></h3>
+        </a>
+      </section>
+
+      <section id="p9"> 
+        <img id="i9" src="../img/side-projects/p9.png" alt="ScreenShoto do projeto9">
+        <a href="https://thiagomassenomaciel.github.io/Projeto-09-V-1.3--clean-front-end.github.io/">  
+          Calculadora do Indice de massa Corporal (IMC)
+          <h4>
+            Um projeto interativo com o intuito de calcular para o usuário seu indice de massa corporal 
+          </h4>
+
+          <h3><i class="bi bi-filetype-html"></i></h3>
+          <h3><i class="bi bi-filetype-css"></i></h3>
+          <h3><i class="bi bi-bootstrap-fill"></i></h3>
+        </a>
+      </section>
+
+      <section id="p10"> 
+        <img id="i10" src="../img/side-projects/p10.png" alt="ScreenShoto do projeto1">
+        <a href="https://thiagomassenomaciel.github.io/Projeto-10--front-end.github.io/Version%201.0%20-%20No%20coments/index.html">  
+          Cronômetro Timer
+          <h4>
+            Uma aplicação web interativa que depois de decidido pelo usuário a contagem regressiva de algum tempo em minutos é dispertado um alarme. E acompanhado com o botão de uma musica de fundo.
+          </h4>          
+          <h3><i class="bi bi-filetype-html"></i></h3>
+          <h3><i class="bi bi-filetype-css"></i></h3>
+          <h3><i class="bi bi-bootstrap-fill"></i></h3>
+        </a>
+      </section>
+
+      <section id="p11"> 
+        <img id="i11" src="../img/side-projects/p11.png" alt="ScreenShoto do projeto1">
+        <a href="https://thiagomassenomaciel.github.io/">
+          Explore o universo
+          <h4>
+            Uma aplicação web aplicando o principio de Single Page Aplication , tal qual exibe ao usuário exibição das paginas do site mais rápido pois , é acessado diferentes paginas do mesmo site sem recarrar toda a página web.
+          </h4>          
+          <h3><i class="bi bi-filetype-html"></i></h3>
+          <h3><i class="bi bi-filetype-css"></i></h3>
+          <h3><i class="bi bi-bootstrap-fill"></i></h3>
+        </a>
+      </section>
+
+
     </main>
   </div>
 </body>
