PAGE sobre responsive MOBILE S,M,L done

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -11,14 +11,14 @@
 
 </head>
 <body>
+  <header id="title">
+    <a href="../index.html">
+     <i class="material-symbols-outlined">arrow_back</i>
+    </a>
+    <h1>Sobre</h1>
+  </header>
+  
   <div id="App">
-    <header id="title">
-      <a href="../index.html">
-       <i class="material-symbols-outlined">arrow_back</i>
-      </a>
-      <h1>Sobre</h1>
-    </header>
-
     <main>
       <section>
         
@@ -41,7 +41,10 @@
             <a href="#"><i class="bi bi-youtube"></i> Youtube</a>
   
             <div id="seePROJECTS">
-              <a href="./meusPJ.html"><i class="bi bi-search"></i>meus projetos</a>
+              <a href="./meusPJ.html">
+                <i class="bi bi-search"></i>
+                <span>meus projetos</span>
+              </a>
             </div>
   
           </div>
@@ -52,7 +55,10 @@
             <br/>
             <span><i class="bi bi-telephone-fill"></i>  +55 85 99221-0323</span>
             <br/>
-            <span id="span4"><i class="bi bi-envelope-at"></i> thiagomasseno3@gmail.com</span>
+            <div id="inline">
+              <i class="bi bi-envelope-at"></i> <span id="spaN">Gmail :</span>
+            </div>
+            <span id="span4"> thiagomasseno3@gmail.com</span>
             <br/>
           </div>
         </div>
