--- a/pages/carreira.html
+++ b/pages/carreira.html
@@ -6,16 +6,20 @@
   <title>Carreira</title>
   <link rel="stylesheet" href="./Cstyle.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
-  <div id="App">
-    <header id="title">
-      <a href="../index.html">
-        <i class="bi bi-arrow-left-circle-fill"></i>
-      </a>
-      <h1>Carreira</h1>
-    </header>
 
+  <header id="title">
+    <a href="../index.html">
+      <i class="material-symbols-outlined">arrow_back</i>
+    </a>
+    <h1>Carreira</h1>
+  </header>
+
+  <div id="App">
     <main>
       <section>
         <img src="../img/Empresa1.png" alt="icone da 1º empresa  tal qual tive experiência profissional">
