PAGE educação  responsive MOBILE S,M,L done

--- a/pages/educacao.html
+++ b/pages/educacao.html
@@ -11,13 +11,14 @@
 
 </head>
 <body>
+  <header id="title">
+    <a href="../index.html">
+     <i class="material-symbols-outlined">arrow_back</i>
+    </a>
+    <h1>Educação</h1>
+  </header>
   <div id="App">
-    <header id="title">
-      <a href="../index.html">
-       <i class="material-symbols-outlined">arrow_back</i>
-      </a>
-      <h1>Educação</h1>
-    </header>
+
 
     <main>
       <section>
@@ -25,9 +26,9 @@
         <h2>Bacharel em Sistemas de Informação</h2>
         <p>
 
-          <span>2022.1 - Presente ( 4º semestre)</span>
+          <span>2022.1 - Presente ( 4º semestre).</span>
           <br/>
-          <span>Centro Universitário 7 de Setembro</span>
+          <span>Centro Universitário 7 de Setembro.</span>
 
         </p>
       </section>
@@ -36,9 +37,9 @@
         <img src="../img/Ensino_Médio.png" alt="Logo da escola de ensino médio tal qual frequentei"/>
         <h2>Curso Técnico em Redes de Computadores</h2>
         <p>
-          <span>2018 - 2020</span>
+          <span>2018 - 2020.</span>
           <br/>
-          <span>E.E.E.P.Francisco Aristóteles de Sousa</span>
+          <span>E.E.E.P.Francisco Aristóteles de Sousa.</span>
         </p>
       </section>
 
