ajeitando os cabeçalhos

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -18,6 +18,7 @@
      <i class="material-symbols-outlined">arrow_back</i>
     </a>
     <h1>Cursos</h1>
+    <div class="centralizar"> </div>
   </header>
 
   <div id="App">
