--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -15,7 +15,13 @@
     <a href="../index.html">
      <i class="material-symbols-outlined">arrow_back</i>
     </a>
+
     <h1>Sobre</h1>
+
+    <div class="centralizar">
+      a
+    </div>
+
   </header>
   
   <div id="App">
