--- a/pages/carreira.html
+++ b/pages/carreira.html
@@ -16,7 +16,12 @@
     <a href="../index.html">
       <i class="material-symbols-outlined">arrow_back</i>
     </a>
+
     <h1>Carreira</h1>
+
+    <div class="centralizar">
+    </div>
+    
   </header>
 
   <div id="App">
