--- a/pages/educacao.html
+++ b/pages/educacao.html
@@ -15,7 +15,12 @@
     <a href="../index.html">
      <i class="material-symbols-outlined">arrow_back</i>
     </a>
+    
     <h1>Educação</h1>
+
+    <div class="centralizar">
+
+    </div>
   </header>
   <div id="App">
 
